--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,64 @@
+h1 {
+  color: firebrick;
+  text-align: center;
+  font-family: fantasy;
 
+}
+div {
+  background-color: cyan;
+  width: 600px;
+  height: 400px;
+  margin-left: 30px;
+  margin-top: 30px;
+  padding-left: 20px;
+  padding-top: 20px;
+  font-style: oblique;
+  font-family: cursive;
+  color:peachpuff;
+  background: linear-gradient(to right, teal, brown);
+  font-size: 50px;
+  border: 7px solid indigo;
+}
+
+p{
+  text-align: center;
+}
+
+table{
+  border: 5px solid blue;
+  background-color: tomato;
+  color: dodgerblue;
+  border-collapse: collapse;
+  width: 20%;
+  text-align: center;
+}
+
+th{
+  border: 3px solid black;
+  background-color: limegreen;
+  color: mediumvioletred;
+  padding:3px;
+
+}
+td{
+  background-color:lightgray;
+  color:black;
+  border: 1px solid black;
+  padding:3px;
+}
+
+#top {
+  font-size: 36px;
+}
+
+#middle {
+  font-size: 24px;
+}
+#bottom {
+  font-size: 12px;
+}
+
+.name {
+  font-weight: bold;
+  color:navy;
+}
